chore(*): amend layout and config

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div class="app">
-    <img width="300" alt="Angular Logo"
-         src="../assets/logo.svg">
-</div>
+<notadd-progress-bar></notadd-progress-bar>
 
+<layout></layout>
+
+<notadd-sidebar name="themeOptionsPanel" class="theme-options-sidebar" position="right" [invisibleOverlay]="true">
+    <notadd-theme-panel></notadd-theme-panel>
+</notadd-sidebar>
