--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,10 @@
-.app{
-    margin: 0;
-    padding: 0;
-    background-color: #3f51b5;
+@import "src/@notadd/scss/notadd";
+
+:host {
+    position: relative;
+    display: flex;
+    flex: 1 1 auto;
     width: 100%;
     height: 100%;
-    text-align: center;
+    min-width: 0;
 }
