--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -4,17 +4,20 @@
 
         <div class="navbar-logo" fxLayout="row" fxLayoutAlign="space-between center">
 
-            <div class="ml-16" fxFlex="80">
+            <div class="ml-16" fxFlex="80" *ngIf="rightNavbar || hiddenNavbar">
                 <mat-icon class="secondary-text" fontSet="NotaddIcon" fontIcon="icon-logo" aria-hidden="true"></mat-icon>
             </div>
 
-            <button mat-icon-button
-                    class="navbar-toggle-button"
-                    (click)="toggleSidebarOpen('navbar')">
-                <mat-icon class="secondary-text">menu</mat-icon>
-            </button>
+            <ng-container *ngIf="hiddenNavbar || collapseNavbar">
+                <button mat-icon-button
+                        class="navbar-toggle-button"
+                        (click)="toggleSidebarCollapsed()">
+                    <mat-icon class="secondary-text">menu</mat-icon>
+                </button>
 
-            <div class="toolbar-separator"></div>
+                <div *ngIf="hiddenNavbar" class="toolbar-separator"></div>
+            </ng-container>
+
         </div>
 
     </div>
