--- a/src/@notadd/components/theme-panel/theme-panel.component.html
+++ b/src/@notadd/components/theme-panel/theme-panel.component.html
@@ -1,5 +1,5 @@
-<div class="theme-options-panel">
-    <div class="header">
+<div class="theme-options-panel" notaddPerfectScrollbar>
+    <div class="header mat-elevation-z2">
 
         <span class="title">主题选项</span>
 
@@ -24,8 +24,10 @@
 
             </div>
 
+            <mat-divider></mat-divider>
+
             <!-- toolbar -->
-            <div class="group" formGroupName="toolbar">
+            <div class="group mt-24" formGroupName="toolbar">
 
                 <h2 class="mb-12">工具栏</h2>
 
@@ -41,14 +43,15 @@
                 </mat-radio-group>
 
                 <h3 class="ml-12 mt-24 mb-8">颜色:</h3>
-                <notadd-material-color-picker class="ml-12 mb-16"
-                                              [(selectedClass)]="notaddConfig.layout.toolbar.background">
+                <notadd-material-color-picker class="ml-12 mb-16" formControlName="background">
                 </notadd-material-color-picker>
 
             </div>
 
+            <mat-divider></mat-divider>
+
             <!-- footer -->
-            <div class="group" formGroupName="footer">
+            <div class="group mt-24" formGroupName="footer">
 
                 <h2 class="mb-12">页脚</h2>
 
@@ -64,10 +67,39 @@
                 </mat-radio-group>
 
                 <h3 class="ml-12 mt-24 mb-8">颜色:</h3>
-                <notadd-material-color-picker class="ml-12 mb-16"
-                                            [(selectedClass)]="notaddConfig.layout.footer.background">
+                <notadd-material-color-picker class="ml-12 mb-16" formControlName="background">
                 </notadd-material-color-picker>
 
+            </div>
+
+            <mat-divider></mat-divider>
+
+            <!-- navbar -->
+            <div class="group mt-24" formGroupName="navbar">
+
+                <h2 class="mb-12">导航栏</h2>
+
+                <mat-slide-toggle class="ml-12" formControlName="hidden">
+                    隐藏
+                </mat-slide-toggle>
+
+                <mat-slide-toggle class="ml-12 mt-24" formControlName="collapsed">
+                    折叠
+                </mat-slide-toggle>
+
+                <h3 class="ml-12 mt-24">位置:</h3>
+                <mat-radio-group class="ml-12" fxLayout="column" fxLayoutAlign="start start" formControlName="position">
+                    <mat-radio-button class="mb-16" value="start">Left</mat-radio-button>
+                    <mat-radio-button class="mb-16" value="end">Right</mat-radio-button>
+                </mat-radio-group>
+
+                <h3 class="ml-12 mt-24 mb-8">颜色:</h3>
+                <div fxFlex="row" fxLayoutAlign="star center">
+                    <notadd-material-color-picker class="ml-12 mb-16" formControlName="secondaryBackground">
+                    </notadd-material-color-picker>
+                    <notadd-material-color-picker class="ml-12 mb-16" formControlName="background">
+                    </notadd-material-color-picker>
+                </div>
             </div>
 
         </div>
