feat(layout): add content component

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -30,7 +30,7 @@
                 </ng-container>
 
                 <!-- content -->
-                <div>内容区域</div>
+                <content></content>
 
                 <!-- footer: Below static -->
                 <ng-container *ngIf="notaddConfig.layout.footer.position === 'below-static'">
