--- a/src/@notadd/scss/partials/_colors.scss
+++ b/src/@notadd/scss/partials/_colors.scss
@@ -206,7 +206,7 @@ $matHues: 50, 100, 200, 300, 400, 500, 600, 700, 800, 900, A100, A200, A400, A70
         }
     }
 
-    .#{$colorName}#{$hue}-fg {
+    .#{$colorName}#{$hue} {
         color: $color !important;
     }
 
