feat(app): amend content component in layout

--- a/src/app/layout/components/content/content.component.html
+++ b/src/app/layout/components/content/content.component.html
@@ -1,2 +1,2 @@
-<content-header></content-header>
+<content-header *ngIf="hasHeader"></content-header>
 <router-outlet *ngIf="true"></router-outlet>
