--- a/src/app/layout/components/content/content.component.scss
+++ b/src/app/layout/components/content/content.component.scss
@@ -1,13 +1,4 @@
 content {
-    position: relative;
-    display: flex;
-    z-index: 1;
-    flex: 1 0 auto;
-
-    > *:not(router-outlet) {
-        display: flex;
-        flex: 1 0 auto;
-        width: 100%;
-        min-width: 100%;
-    }
+    width: 100%;
+    height: 100%;
 }
