feat(@notadd): add thousands-separator pipe

--- a/src/@notadd/scss/partials/_reset.scss
+++ b/src/@notadd/scss/partials/_reset.scss
@@ -1,6 +1,4 @@
-/*----------------------------------------------------------------*/
-/*  Reset
-/*----------------------------------------------------------------*/
+/*  Reset */
 * {
     text-rendering: optimizeLegibility;
     -o-text-rendering: optimizeLegibility;
