--- a/src/@notadd/components/breadcrumb/breadcrumb.component.html
+++ b/src/@notadd/components/breadcrumb/breadcrumb.component.html
@@ -2,11 +2,11 @@
     <ol class="breadcrumb-list">
         <li class="breadcrumb-item"
             *ngFor="let breadcrumb of breadcrumbs; let last = last">
-            <a *ngIf="!last" [routerLink]="[breadcrumb.url, breadcrumb.params]">{{ breadcrumb.label }}</a>
+            <a *ngIf="!last" class="mat-accent" [routerLink]="[breadcrumb.url, breadcrumb.params]">{{ breadcrumb.label }}</a>
             <span *ngIf="last">{{ breadcrumb.label }}</span>
         </li>
     </ol>
-    <div class="current-breadcrumb" *ngIf="currentBreadcrumb?.label">
-        {{ currentBreadcrumb.label }}
+    <div class="current-breadcrumb">
+        {{ breadcrumbs[breadcrumbs.length - 1]?.label }}
     </div>
 </div>
