feat(@notadd): add page-layouts partial

--- a/src/@notadd/scss/core.scss
+++ b/src/@notadd/scss/core.scss
@@ -27,6 +27,7 @@
 @import "partials/forms";
 @import "partials/toolbar";
 @import "partials/navigation";
+@import "partials/page-layouts";
 
 // Plugins
 @import "partials/plugins/plugins";
