--- a/src/app/layout/components/content/header/header.component.html
+++ b/src/app/layout/components/content/header/header.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar>
+<mat-toolbar fxLayout="row nowrap" fxLayoutAlign="start center">
     <notadd-breadcrumb></notadd-breadcrumb>
 </mat-toolbar>
