--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -16,8 +16,12 @@ layout {
         z-index: 1;
         min-width: 0;
 
-        mat-sidenav-container{
+        mat-sidenav-container {
             height: calc(100% - #{$height__main-toolbar});
+        }
+
+        mat-sidenav-content {
+            background-color: #f5f5f5;
         }
 
         > .container {
