--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,19 @@
 // Import Notadd core library
 @import "@notadd/scss/core";
+
+body {
+    color: rgba(0,0,0,.87);
+    background: #f5f5f5;
+}
+
+body, html {
+    display: flex;
+    flex: 1 0 auto;
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
