fix(app/layout): fix perfect scrollbar not effective

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -15,14 +15,14 @@
         </mat-sidenav>
 
         <!-- container -->
-        <mat-sidenav-content>
+        <mat-sidenav-content notaddPerfectScrollbar
+                             [notaddPerfectScrollbarOptions]="{suppressScrollX: true, updateOnRouteChange : true}">
             <!-- toolbar: Below fixed -->
             <ng-container *ngIf="notaddConfig.layout.toolbar.position === 'below-fixed'">
                 <ng-container *ngTemplateOutlet="toolbar"></ng-container>
             </ng-container>
 
-            <div class="container" notaddPerfectScrollbar
-                 [notaddPerfectScrollbarOptions]="{suppressScrollX: true, updateOnRouteChange : true}">
+            <div class="container">
 
                 <!-- toolbar: Below static -->
                 <ng-container *ngIf="notaddConfig.layout.toolbar.position === 'below-static'">
