feat(@notadd): add mat icons module and install @mdi/angular-material

--- a/src/@notadd/scss/partials/_icons.scss
+++ b/src/@notadd/scss/partials/_icons.scss
@@ -27,3 +27,17 @@ mat-icon {
         }
     }
 }
+
+/* solve the problem where an icon isn't aligned properly when used in a menu item */
+button.mat-menu-item {
+    line-height: 24px !important;
+}
+
+a.mat-menu-item > mat-icon {
+    margin-bottom: 14px;
+}
+
+.mat-icon svg {
+    height: 24px;
+    width: 24px;
+}
