feat(app/layout): update components that use icon

--- a/src/app/layout/components/footer/footer.component.html
+++ b/src/app/layout/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div fxLayout="row" fxLayoutAlign="center center" fxLayoutAlign.gt-xs="space-between center" fxFlex>
 
         <a mat-button href="https://github.com/notadd/ng-notadd" target="_blank" fxFlex="0 0 auto">
-            <mat-icon svgIcon="notadd-svg:github" class="s-20 mr-sm-4"></mat-icon>
+            <mat-icon svgIcon="mdi:github-circle" class="mr-12"></mat-icon>
             <span>GitHub</span>
         </a>
 
