feat(@notadd/scss): amend icon styles

--- a/src/@notadd/scss/notadd.scss
+++ b/src/@notadd/scss/notadd.scss
@@ -4,5 +4,8 @@
 // Breakpoint mixins
 @import "mixins/breakpoints";
 
+// Icon Size mixins
+@import "mixins/icon-size";
+
 // Notadd logo
 @import "icon-font/iconfont";
