--- a/src/@notadd/scss/partials/_icons.scss
+++ b/src/@notadd/scss/partials/_icons.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
 i,
 mat-icon {
     font-size: 24px;
@@ -35,9 +37,4 @@ button.mat-menu-item {
 
 a.mat-menu-item > mat-icon {
     margin-bottom: 14px;
-}
-
-.mat-icon svg {
-    height: 24px;
-    width: 24px;
 }
