feat(app/main): add list component in basic-ui module

--- a/src/@notadd/scss/partials/_page-layouts.scss
+++ b/src/@notadd/scss/partials/_page-layouts.scss
@@ -151,6 +151,10 @@ $card-header-height-without-toolbar: $card-header-height - $card-toolbar-height;
                 }
             }
         }
+
+        &:not(.fullwidth) > .content {
+            margin: 30px;
+        }
     }
 
     &.simple {
