fix(app/layout): fix unexpected bugs

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -4,7 +4,7 @@
         <ng-container *ngTemplateOutlet="toolbar"></ng-container>
     </ng-container>
 
-    <mat-sidenav-container [class.boxed]="layoutMode" autosize>
+    <mat-sidenav-container autosize>
         <!-- navbar -->
         <mat-sidenav
             [ngClass]="{'collapsed': notaddConfig.layout.navbar.collapsed}"
