--- a/src/@notadd/components/breadcrumb/breadcrumb.component.scss
+++ b/src/@notadd/components/breadcrumb/breadcrumb.component.scss
@@ -9,7 +9,7 @@
             position: relative;
             line-height: 14px;
 
-            & + .breadcrumb-item::before {
+            & + .breadcrumb-item:not(:last-child)::before {
                 display: inline-block;
                 padding-right: .5rem;
                 padding-left: .5rem;
@@ -22,6 +22,12 @@
             &.active {
                 display: block;
                 margin-top: 5px;
+
+                span {
+                    font-size: 18px;
+                    line-height: 18px;
+                    color: #333;
+                }
             }
         }
 
@@ -31,15 +37,5 @@
             text-decoration: none;
             background-color: transparent;
         }
-
-        span {
-            font-size: 14px;
-        }
-    }
-
-    .current-breadcrumb{
-        font-size: 18px;
-        line-height: 18px;
-        color: #333;
     }
 }
