feat(app/main): add grid-list component in basic-ui module

--- a/src/app/main/elements/basic-ui/list/list.component.html
+++ b/src/app/main/elements/basic-ui/list/list.component.html
@@ -1,5 +1,5 @@
 <div class="element-list page-layout card">
-    <div class="content mb-30" fxLayout="row nowrap" fxLayoutAlign="space-between start" fxLayoutGap="30px">
+    <div class="content center mt-32" fxLayout="row nowrap" fxLayoutAlign="space-between start" fxLayoutGap="30px">
         <div class="p-24" fxLayout="column nowrap" fxFlex="1 0 0%">
             <h3>Simple lists</h3>
             <mat-list>
